Fix #46: Job Table overflow ellipsis

--- a/Disco.Web/ClientSource/Style/Site.less
+++ b/Disco.Web/ClientSource/Style/Site.less
@@ -742,6 +742,14 @@ table.jobTable {
     .tableData;
     table-layout: fixed;
 
+    td {
+        white-space: nowrap;
+        overflow: hidden;
+        -ms-text-overflow: ellipsis;
+        -o-text-overflow: ellipsis;
+        text-overflow: ellipsis;
+    }
+
     &.hideStatusClosed {
         tr[data-status=Closed] {
             display: none;
